2020-03-02  Charlie Zender  <zender@uci.edu>

	* nco.texi more work on --frac_b_nrm documentation

2020-03-01  Charlie Zender  <zender@uci.edu>

	* ncremap/ncclimo: Re-formulate --par_typ option parsing to use	regular expressions

	* Update --unq_sfx documentation

2020-02-28  Charlie Zender  <zender@uci.edu>

	* nco_rgr.c allow polar caps in small-circle code (which now finally runs to completion)

	* nco.texi Add (over past week) long-winded documentation for --chk_map and SGS

2020-02-21  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.3-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.3-alpha02: Fuji Rolls';git push
	git tag -a 4.9.3-alpha02 -m 'ncks --frac_b_fix;ncremap --correct_areas;';git push --tags

	* ncremap add --correct_areas on the four conservative TR maps with destination FV grids

	* Update OpenMP update shared() clause in nco_ply_lst.c for thr_quota,thr_quota_step for Intel Compilers

2020-02-20  Charlie Zender  <zender@uci.edu>

	* Update Zen of Regridding documentation on Confluence

2020-02-18  Charlie Zender  <zender@uci.edu>

	* Recompute and store new frac_a as well as frac_b when	re-normalizing weights

	* Change ncks --map_fix option (ambiguous with ncks --map) to --fix_map or --frac_b_fix

2020-02-17  Charlie Zender  <zender@uci.edu>

	* ncks nco_map_fix() add --map_fix option to fix self-overlaps

2020-02-14  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.3-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.3-alpha01: VD';git push
	git tag -a 4.9.3-alpha01 -m 'Functionally identical to 4.9.2';git push --tags

	* Change malingering gpl.html URLs to BSD3 URLs

	* NCO 4.9.2 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2: Delirium';git push
	git tag -a 4.9.2 -m 'Re-license from GPL3 to BSD;ncks chk_map, lz4.cdl;ncpdq -U -v lat fix;ncremap prs->hyb, crv axis/crd atts, fv2fv opt, ne1024pg2, NaN area, fl_fmt/hdr_pad, sml_crc;';git push --tags

	* Shrink homepage logo, fix banner
